Adjusted position and layout to prevent overflow.

--- a/_input/assets/css/style.css
+++ b/_input/assets/css/style.css
@@ -136,8 +136,6 @@ a:hover {
 	width: 40px;
 	height: 70px;
 	margin-left: -20px;
-	bottom: 10px;
-	margin-top: -35px;
 	box-shadow: inset 0 0 0 1px rgb(33, 37, 41);
 	border-radius: 25px;
 }
